--- a/css/style.css
+++ b/css/style.css
@@ -880,4 +880,30 @@ a:focus {
   -webkit-transform: rotate(-45deg) translate(8px, -8px);
           transform: rotate(-45deg) translate(8px, -8px);
 }
+
+.panel {
+    padding: 20px;
+    border-radius: 10px;
+	background-color: #3a5a40; 
+}
+
+.panel:hover {
+            transform: scale(1.1); /* Membesarkan panel */
+            background-color: #3a5a40; /* Tukar warna latar */
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); /* Tambah shadow */
+        }
+		
+/* Icon Container */
+.icon-container {
+    display: flex;
+    opacity: 0;
+    transform: rotate(0deg);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+/* When visible (triggered by JavaScript) */
+.icon-container.visible {
+    opacity: 1;
+    transform: rotate(360deg);
+}
 /*# sourceMappingURL=style.css.map */
